--- a/config-core/src/main/config/properties/com/silverpeas/common/multilang/fileNotFound_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/common/multilang/fileNotFound_de.properties
@@ -26,4 +26,4 @@ error.404.description=Das gew&uuml;nschte Dokument konnte auf dieser Seite nicht
 error.404.solutions=Sie haben drei M&ouml;glichkeiten um dieses Dokument zu finden :
 error.404.solution.first=Suche nach Namen oder W&ouml;rter die in diesem Dokument enthalten sind.
 error.404.solution.second=Durchsuchen Sie die Site-Map. Alle Website-Dokumente sind dort aufgelistet.
-error.404.solution.third=Sie k&ouml;nnen sich auch auf der Homepage der Platform begeben.
+error.404.solution.third=Sie k\u00f6nnen sich auch auf der Homepage der Platform begeben.
