--- a/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/directory/multilang/DirectoryBundle_de.properties
@@ -33,7 +33,7 @@ directory.breadcrumb.2 = Meine gemeinsamen Kontakte mit
 directory.breadcrumb.3 = Kontakte von
 directory.breadcrumb.4 = Gruppen-Verzeichnis
 directory.breadcrumb.5 = Domain-Verzeichnis
-directory.breadcrumb.6 = Raum-Verzeichnis
+directory.breadcrumb.6 = Bereich-Verzeichnis
 
-directory.query.error.title = Impossible search
-directory.query.error.msg = Characters * and ? are <b>wildcards</b>.<br/>It can not be used at the beginning of a term.<br/><br/>Please correct the query and restart your search...
+directory.query.error.title = Suche unm\u00f6glich
+directory.query.error.msg = Die Zeichen * und ? sind <b>Platzhalter</b>.<br/>Sie k\u00f6nnen nicht am Anfang eines Wortes verwendet werden.<br/><br/>Wir danken Ihnen, den Antrag zu korrigieren und Ihre Suche neu zu starten...
