--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -42,7 +42,9 @@ eq =
 le = (vor dem)
 ge = (nach dem)
 
-# FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00e4nglich 
+# Wysiwyg
+FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00e4nglich 
+
 FormatText = Text in welcher Schriftart formatiert? 
 FormatColor = Text in welcher Farbe formatiert? 
 Paragraph = Abschnitt
@@ -101,4 +103,4 @@ White = Weiss
 form.Extra = Weitere Informationen
 form.field.file.toolong = muss eine Datei sein, dessen Name nicht mehr als 100 Zeichen enthalten darf.
 
-field.explorer.browse = Browse...
+field.explorer.browse = Durchsuchen...
