--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_de.properties
@@ -28,12 +28,12 @@ importExportPeas.ImportDescriptor = Import-XML-Deskriptor
 importExportPeas.Import = Import starten
 
 importExportPeas.StatGlobal = Umfassende Statistiken
-importExportPeas.StatComponent = Statistiken pro Komponente
+importExportPeas.StatComponent = Statistiken pro Anwendung
 
 importExportPeas.ImportDuration	= Dauer
 importExportPeas.NbFilesImported = Anzahl der importierten Dateien
 importExportPeas.NbFilesNotFound = Anzahl der nicht zug\u00e4nglichen Dateien
-importExportPeas.Composant = Komponente
+importExportPeas.Composant = Anwendung
 
 importExportPeas.NbPubCreated = Anz. der erstellten Publikationen
 importExportPeas.NbPubUpdated = Anz. der ge\u00e4nderten Publikationen
@@ -43,7 +43,7 @@ importExportPeas.Status	= Status
 importExportPeas.Repository = Verzeichnis
 
 importExportPeas.ImportError0 = Unerwarteter Fehler
-importExportPeas.ImportError1 = Komponente nicht vorhanden
+importExportPeas.ImportError1 = Anwendung nicht vorhanden
 importExportPeas.ImportError2 = Datei nicht vorhanden oder nicht zug\u00e4nglich
 importExportPeas.ImportError3 = Verzeichnis nicht vorhanden oder nicht zug\u00e4nglich
 importExportPeas.ImportError4 = Meta-Information falsch
@@ -72,7 +72,7 @@ importExportPeas.File = Herunterzuladende Datei
 
 importExportPeas.InProgress = Export wird ausgef\u00fchrt...
 
-importExportPeas.export.what			= What do you export?
-importExportPeas.export.mode.filesOnly	= Files only
-importExportPeas.export.mode.pubsOnly	= Publications and attached files
-importExportPeas.export.mode.full		= Full export
+importExportPeas.export.what = Was m\u00f6chten Sie exportieren ?
+importExportPeas.export.mode.filesOnly = Nur Dateien
+importExportPeas.export.mode.pubsOnly = Publikationen und Anh\u00e4nge
+importExportPeas.export.mode.full = Alles exportieren
