--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -33,20 +33,20 @@ JMP.help = Hilfe
 JMP.tools = Tools
 JMP.clipboard = Zwischenspeicher
 
-JD = Administration
+JD = Benutzer und Bereiche
 JKM = Klassierungsplan
 JSTAT = Statistiken
 JTOOLS = Tools
 
 JDP = Verweis
-JSPP = Bereichverwaltung
+JSPP = Bereiche und Anwendungen
 JRP = Profil
 JSP = Suche
 JMAP = Wartung
 JST = SilverTrace-Konsole
 JTD = Formulare
 portlets = Portlets
-reindexation=Reindexation
+reindexation=Reindizieren
 JAB = About...
 
 JKM1 = Achsen
