--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_de.properties
@@ -23,10 +23,10 @@
 #
 JSP.administrationTab = Verwaltung
 JSP.searchTab = Suche
-JSP.searchField = Id oder Namen (außer Publikationen)
+JSP.searchField = Id oder Namen (au\u00dfer Publikationen)
 JSP.search = Suche
 JSP.space = Spaces / Unterspaces
-JSP.service = Services
+JSP.service = Anwendungen
 JSP.publication = Publikationen
 JSP.group = Gruppen / Untergruppen von Benutzern
 JSP.user = Benutzer
