--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -29,14 +29,14 @@ JSPP.homepageType = Startseiten-Typ
 JSPP.main = Silverpeas-Startseite
 JSPP.manageHomePage = R\u00e4ume
 
-JSPP.peas = Service
+JSPP.peas = Anwendung
 JSPP.portlet = Portlet
 JSPP.webPage = URL
 
-JSPP.selectPeas = Wahl eines Service
+JSPP.selectPeas = Wahl einer Anwendung
 JSPP.spaceHomePage = Startseite des Bereichs
 
-JSPP.update = \u00c4ndern
+JSPP.update = \u00C4ndern
 JSPP.updateHomePage = Startseite
 
 JSPP.SpaceTemplate = Bereichvorlagen
@@ -62,10 +62,10 @@ JSPP.SpaceProfilePanelCreateTitle = Anwender der Rolle festlegen
 JSPP.SpaceProfilePanelModifyTitle = Anwender der Rolle \u00e4ndern
 JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle l\u00f6schen
 
-JSPP.ComponentPanelCreateTitle = Einen Dienst hinzuf\u00fcgen
-JSPP.ComponentPanelModifyTitle = Den Dienst \u00e4ndern
-JSPP.ComponentPanelDeleteTitle = Den Dienst l\u00f6schen
-JSPP.CopyComponent = Dienst kopieren
+JSPP.ComponentPanelCreateTitle = Eine Anwendung hinzuf\u00fcgen
+JSPP.ComponentPanelModifyTitle = Die Anwendung \u00e4ndern
+JSPP.ComponentPanelDeleteTitle = Die Anwendung l\u00f6schen
+JSPP.CopyComponent = Anwendung kopieren
 JSPP.PasteComponent = Einf\u00fcgen
 
 JSPP.SubSpacePanelCreateTitle = Einen Unter-Bereich erstellen
@@ -80,7 +80,7 @@ JSPP.ModifyStartPage = Startseite \u00e4ndern
 JSPP.creationSpace = Bereicherstellung
 JSPP.creationSubSpace = Unter-Bereich-Erstellung
 JSPP.updateSpace = Bereich\u00e4nderung
-JSPP.creationInstance = Einen Dienst hinzuf\u00fcgen
+JSPP.creationInstance = Eine Anwendung hinzuf\u00fcgen
 JSPP.roleDescription = Beschreibung der Rolle
 
 # erreurs
@@ -92,30 +92,29 @@ Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
 # messages
-JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00f6schen zu wollen?\\n\\n-->
-JSPP.MessageSuppressionSpaceEnd = <-\\n
+JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00f6schen zu wollen?\\n\\n--\u003E
+JSPP.MessageSuppressionSpaceEnd = \u003C-\\n
 JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer l\u00f6schen zu wollen?
-JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00f6schen zu wollen?\\n\\n-->
-JSPP.MessageSuppressionInstanceEnd = <--\\n
+JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diese Anwendung l\u00f6schen zu wollen?\\n\\n--\u003E
+JSPP.MessageSuppressionInstanceEnd = \u003C--\\n
 
 # onglets roles
 JSPP.Manager = Bereich Verwalter 
 JSPP.admin = Verwalter
-JSPP.publisher = Editor
-JSPP.writer = Schreiber
+JSPP.publisher = Herausgeber
+JSPP.writer = Redaktor
 JSPP.reader = Leser
-
-JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
+JSPP.Manager.help = Die Rolle "Manager des Bereichss" erlaubt nur die Verwaltung dieses Bereichs f\u00fcr einen Benutzer zu delegieren.<br/>Standardm\u00e4\u00dfig hat ein "Manager des Bereichs" kein Recht \u00fcber die Anwendungen des Bereichs.<br/>Achten Sie darauf, diese Rolle mit der des "Verwalter" nicht zu verwechseln. <br/>Nur diese erlaubt es die Anwendungen des Bereichs zu verwalten.
 
 # Gestion de l'ordre
 JSPP.SpaceOrder = Verschiebung des Bereichs
 JSPP.SpacePlace = Verschiebung vor dem Bereich
 JSPP.PlaceLast = Verschieben am Ende
-JSPP.ComponentOrder = Verschiebung des Dienstes
-JSPP.ComponentPlace = Verschiebung vor die Komponente
+JSPP.ComponentOrder = Verschiebung der Anwendung
+JSPP.ComponentPlace = Verschiebung vor der Anwendung
 
 # position espace, composant
-JSPP.SpacePosition = Dienste anzeigen
+JSPP.SpacePosition = Anwendungen anzeigen
 JSPP.NoSpacePosition = W\u00e4hlen Sie die Position
 JSPP.SpacePositionFirst = Nach den Unterr\u00e4umen
 JSPP.SpacePositionLast = Vor den Unterr\u00e4umen
@@ -123,26 +122,26 @@ JSPP.SpacePositionLast = Vor den Unterr\u00e4umen
 # Deplacement de composant
 JSPP.SpaceIn = Verschiebung in dem Bereich
 JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich m\u00fcssen sich in Wartung befinden...
-JSPP.MessageConfirmMovingComponentInSpace = Sind Sie sicher, diese Komponente in diesem Bereich verschieben zu wollen?
-JSPP.ExistingComponentName = Verschiebung unm\u00f6glich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
+JSPP.MessageConfirmMovingComponentInSpace = Sind Sie sicher, diese Anwendung in diesem Bereich verschieben zu wollen?
+JSPP.ExistingComponentName = Verschiebung unm\u00f6glich... Im Bestimmungsbereich befindet sich bereits eine Anwendung mit diesem Namen.
 JSPP.movingInProgress = Verschiebung l\u00e4uft...
 
 # Copy/Cut/Paste component
 JSPP.CopyOf = Kopie von
 
 # Sauvegarde
-JSPP.BackupUnlimited = Sichern/Wiederherstellen von Komponenten
-JSPP.BackupSpace = Komponenten des Bereichs sichern/wiederherstellen
+JSPP.BackupUnlimited = Sichern/Wiederherstellen von Anwendungen
+JSPP.BackupSpace = Anwendungen des Bereichs sichern/wiederherstellen
 
-JSPP.ErrorComponentCreation = Fehler bei der Erstellung der Komponente
-JSPP.ErrorComponentUpdate = Fehler bei der \u00c4nderung der Komponente
-JSPP.ErrorComponentMessage = \u00dcberpr\u00fcfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
+JSPP.ErrorComponentCreation = Fehler bei der Erstellung der Anwendung
+JSPP.ErrorComponentUpdate = Fehler bei der \u00C4nderung der Anwendung
+JSPP.ErrorComponentMessage = \u00DCberpr\u00fcfen Sie, ob eine andere Anwendung des Bereichs nicht bereits denselben Namen hat!
 JSPP.ErrorSpaceCreation = Fehler bei der Erstellung des Bereichs
-JSPP.ErrorSpaceUpdate = Fehler bei der \u00c4nderung des Bereichs
-JSPP.ErrorSpaceMessage = \u00dcberpr\u00fcfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
+JSPP.ErrorSpaceUpdate = Fehler bei der \u00C4nderung des Bereichs
+JSPP.ErrorSpaceMessage = \u00DCberpr\u00fcfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
 
 # Corbeille
-JSPP.Bin = R\u00e4ume- und Komponenten-Korb
+JSPP.Bin = R\u00e4ume- und Anwendungs-Korb
 JSPP.BinRemoveDate = L\u00f6schdatum
 JSPP.BinRestore = Wiederherstellen
 JSPP.BinRestoreSelected = Sind Sie sicher, die gew\u00e4hlten Elemente wiederherstellen zu wollen?
@@ -151,16 +150,16 @@ JSPP.BinEmpty = Der Korb ist leer!
 JSPP.BinDeleteConfirm = Sind Sie sicher, dieses Element und seinen gesamten Inhalt definitiv l\u00f6schen zu wollen?
 JSPP.BinDeleteConfirmSelected = Sind Sie sicher, die gew\u00e4hlten Elemente und ihren gesamten Inhalt definitiv l\u00f6schen zu wollen?
 
-JSPP.publicComponent = &Ouml;ffentlicher Zugang
+JSPP.publicComponent = \u00D6ffentlicher Zugang
 JSPP.hiddenComponent = Unsichtbar
 JSPP.inheritanceBlockedComponent = Erbe der Rechte
 JSPP.localRights = Spezifische Rechte
 JSPP.inheritedRights = Ererbte Rechte
 
 JSPP.inheritanceSpaceNotUsed = Dieser Sekond\u00e4rbereich erbt nicht die Rechte des Bereichs.
-JSPP.inheritanceComponentNotUsed = Dieses Komponent erbt nicht die Rechte des Bereichs.
+JSPP.inheritanceComponentNotUsed = Diese Anwendung erbt nicht die Rechte des Bereichs.
 JSPP.inheritanceSpaceUsed = Dieser Sekond\u00e4rbereich erbt die Rechte des Bereichs.
-JSPP.inheritanceComponentUsed = Dieses Komponent erbt die Rechte des Bereichs.
+JSPP.inheritanceComponentUsed = Diese Anwendung erbt die Rechte des Bereichs.
 JSPP.click = Hier
 JSPP.here = anclicken
 JSPP.inheritanceToNotUse = um die Rechte des Bereichs nicht mehr zu benutzen.
@@ -174,5 +173,5 @@ JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten...
 JSPP.parameters = Einstellungen 	  	 
   	  	 
 JSPP.SpaceHomepage.URL.help = Mehrere Werte sind f\u00fcr das <b>URL</b>-Feld m\u00f6glich: <ul><li>Absolut Pfad. Beispiel: http://www.google.com</li><li>Interne Adresse. Beispiel: /admin/jsp/page.jsp (Kontext nicht angeben /silverpeas)</li><li>Interne Adresse zu einer anderen Web-Anwendung. Beispiel: <b>$</b>/weblib/pages/page.jsp (Beginnen mit $/<nom_application_web>)</li></ul>
-JSPP.spaceRecover = Recover rights
-JSPP.applications.add = Add this application
+JSPP.spaceRecover = Rechte wiederherstellen
+JSPP.applications.add = Diese Anwendung hinzuf\u00fcgen
