--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle_de.properties
@@ -32,7 +32,7 @@ lookSilverpeasV5.AdvancedSearch = Fortgeschritten
 lookSilverpeasV5.LastSearchResults = Letzte Ergebnisse
 lookSilverpeasV5.Help = Hilfe
 lookSilverpeasV5.Map = Siteplan
-lookSilverpeasV5.PersonalSpace = Pers\u00f6nlicher Raum
+lookSilverpeasV5.PersonalSpace = Pers\u00f6nlicher Bereich
 lookSilverpeasV5.loadingSpaces = Laden der R\u00e4ume...
 lookSilverpeasV5.Feedback = Dem Administrator schreiben
 lookSilverpeasV5.Clipboard = Zwischenspeicher
@@ -41,21 +41,21 @@ lookSilverpeasV5.reductExtend = Verkleinern / Strecken
 lookSilverpeasV5.backOffice = Verwaltung
 lookSilverpeasV5.home = Startseite
 lookSilverpeasV5.directory = Verzeichnis
-lookSilverpeasV5.userlink = View my newsfeed and profile
+lookSilverpeasV5.userlink = Meine News-Feed und Profil anzeigen
  
 # Connected Users
 lookSilverpeasV5.connectedUser = Anderer verbunder Benutzer
 lookSilverpeasV5.connectedUsers = Andere verbunde Benutzer
  
-lookSilverpeasV5.personalSpace.add =Komponente hinzuf\u00fcgen...
-lookSilverpeasV5.personalSpace.select = W\u00e4hlen Sie eine Komponente :
-lookSilverpeasV5.personalSpace.remove.confirm = Sind Sie sicher dauerhaft diese Komponente, und alles was es enth\u00e4lt, l\u00f6schen zu wollen?
+lookSilverpeasV5.personalSpace.add =Anwendung hinzuf\u00fcgen...
+lookSilverpeasV5.personalSpace.select = W\u00e4hlen Sie eine Anwendung :
+lookSilverpeasV5.personalSpace.remove.confirm = Sind Sie sicher dauerhaft diese Anwendung, und alles was es enth\u00e4lt, l\u00f6schen zu wollen?
 lookSilverpeasV5.personalSpace.gallery = Meine Bilder
 lookSilverpeasV5.personalSpace.rssAgregator = Meine RSS Feeds
 lookSilverpeasV5.personalSpace.kmelia = Meine Dokumente
 lookSilverpeasV5.personalSpace.yellowpages = Meine Kontakte
  
 #Favorite space labels
-lookSilverpeasV5.noFavoriteSpace = Sie haben kein Lieblings Raum ausgew\u00e4hlt.
+lookSilverpeasV5.noFavoriteSpace = Sie haben kein Lieblings Bereich ausgew\u00e4hlt.
 lookSilverpeasV5.favoriteSpace.tabAll = Alle
 lookSilverpeasV5.favoriteSpace.tabBookmarks = Favoriten
