--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
@@ -23,7 +23,7 @@
 #
 
 myLinks.links = Meine Favoriten
-myLinks.linksByComponent = Links der Komponente
+myLinks.linksByComponent = Links der Anwendung
 myLinks.createLink = \u003E Einen Favoriten-Link erstellen
 myLinks.updateLink = \u003E Einen Favoriten-Link \u00e4ndern
 myLinks.addLink = Einen Link hinzuf\u00fcgen
@@ -34,4 +34,4 @@ myLinks.operation = Operationen
 myLinks.deleteLinks = Gew\u00e4hlte Links l\u00f6schen
 myLinks.deleteSelection = Sind Sie sicher, diese Auswahl l\u00f6schen zu wollen? 
 myLinks.messageConfirm = Der Link ist zu Ihren Favoriten hinzugef\u00fcgt worden
-myLinks.retour = Zur\u00fcck zur Komponente
+myLinks.retour = Zur\u00fcck zur Anwendung
