--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_de.properties
@@ -26,7 +26,7 @@ notification.title = Eine neue klassifizierte Publikation
 standartMessage = Eine neue Publikation in einem Ihrer Interessenschwerpunkte
 Space    = Bereich: 
 Subscription = Interessenschwerpunkt: 
-Service  = KM Service: 
+Service  = Anwendung: 
 Date     = Datum: 
 URL      = Link: 
 Axis     = Achse: 
