--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_de.properties
@@ -42,9 +42,9 @@ portlets.portlet.myCheckOutFiles.help = Dieses Portlet zeigt Ihnen alle Ihre der
 portlets.portlet.myTodos.help = Dieses Portlet zeigt Ihnen alle Ihre Aufgaben die noch nicht abgeschlossen sind.
 portlets.portlet.quickInfos.help = Dieses Portlet zeigt alle aktuellen Nachrichten.
  
-portlets.portlet.componentInstance.help = Dieses Portlet zeigt eine Portal-Komponente an. Wenn Sie nicht \u00fcber gen\u00fcgend Zugriffsrechte verf\u00fcgen, wird eine Fehlermeldung angezeigt,
+portlets.portlet.componentInstance.help = Dieses Portlet zeigt ein Portal-Anwendung an. Wenn Sie nicht \u00fcber gen\u00fcgend Zugriffsrechte verf\u00fcgen, wird eine Fehlermeldung angezeigt,
 portlets.portlet.componentInstance.error.accessForbidden = Unerlaubter Zugriff!
-portlets.portlet.componentInstance.pref.instanceId = Id der Komponente
+portlets.portlet.componentInstance.pref.instanceId = Id der Anwendung
  
 portlets.portlet.iFrame.pref.url = URL
 portlets.portlet.iframe.pleaseURL = Sie m\u00fcssen die URL der Webseite angeben !
