--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -24,29 +24,29 @@ selection.UserSelectionPanel=Auswahl von Benutzern
 selection.Filter=Filtern nach
 selection.groupFound=gruppe gefunde
 selection.AddToSelection=Zur Auswahl hinzuf\u00fcgen
-selection.AllUsers=Alle Benutzern
-selection.RootUserGroups=Benutzergruppen
-selection.searchUserGroups=Suchen Gruppen
-selection.AddAllGroups=F\u00fcgen Sie alle Gruppen
-selection.AddAllGroupsToSelection=F\u00fcgen Sie alle Gruppen in der Auswahl
-selection.SelectedUsersAndGroups=Ausgew\u00e4hlte
+selection.AllUsers=Alle Benutzer
+selection.RootUserGroups=Gruppen
+selection.searchUserGroups=Suche Gruppen
+selection.AddAllGroups=Alle Gruppen hinzuf\u00fcgen
+selection.AddAllGroupsToSelection=Alle Gruppen die Auswahl hinzuf\u00fcgen
+selection.SelectedUsersAndGroups=Auswahl
 selection.groupSelected=ausgew\u00e4hlte Gruppe
-selection.userSelected=ausgew\u00e4hlte Benutzer
-selection.RemoveFromSelection=Entfernen Sie eine beliebige Auswahl
-selection.Empty=Leer
+selection.userSelected=ausgew\u00e4hlter Benutzer
+selection.RemoveFromSelection=Von der Auswahl entfernen
+selection.Empty=Leeren
 selection.RemoveAllGroupsFromSelection=Entfernen Sie alle Gruppen in der Auswahl
-selection.searchUsers=Suchen Benutzern
-selection.userFound=benutzer gefunde
-selection.AddAllUsersToSelection=F\u00fcgen Sie alle Benutzern in der Auswahl
-selection.AddAllUsers=F\u00fcgen Sie alle Benutzern
-selection.RemoveAllUsersFromSelection=Entfernen Sie alle Benutzern in der Auswahl
-selection.selectedUsers=Ausgew\u00e4hlten Benutzern
-selection.selectedGroups=Ausgew\u00e4hlten Gruppen
-selection.groupsSelected=ausgew\u00e4hlten Gruppen
-selection.usersSelected=suchen Benutzern
-selection.groupsFound=gruppen gefunden
-selection.usersFound=benutzern gefunden
-selection.SelectedUsers=Ausgew\u00e4hlte
-selection.SelectedGroups=Ausgew\u00e4hlte
+selection.searchUsers=Suche Benutzer
+selection.userFound=gefunden Benutzer
+selection.AddAllUsersToSelection=Alle Benutzer die Auswahl hinzuf\u00fcgen
+selection.AddAllUsers=Alle Benutzer hinzuf\u00fcgen
+selection.RemoveAllUsersFromSelection=Entfernen Sie alle Benutzer in der Auswahl
+selection.selectedUsers=Ausgew\u00e4hlte Benutzer
+selection.selectedGroups=Ausgew\u00e4hlte Gruppen
+selection.groupsSelected=ausgew\u00e4hlte Gruppen
+selection.usersSelected=ausgew\u00e4hlte Benutzer
+selection.groupsFound=gefundene Gruppen
+selection.usersFound=gefundene Benutzer
+selection.SelectedUsers=Auswahl
+selection.SelectedGroups=Auswahl
 selection.MyContacts=Meine Kontakte
-selection.SelectedUserOrGroup=einzigartigen Auswahl
+selection.SelectedUserOrGroup=Exklusive Auswahl
