--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -61,9 +61,9 @@ templateDesigner.passwordDB = Passwort f\u00fcr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 templateDesigner.suggestions = Vorschl\u00e4ge
 templateDesigner.facet = Facette
-templateDesigner.facet.warning = For the facet appears in the list of search results, you must manually re-index all applications that use this form.
+templateDesigner.facet.warning = Damit die Facette in der Liste der Suchergebnisse erscheint, m\u00fcssen Sie manuell alle Anwendungen, die dieses Formular benutzen, neu indizieren.
 
-templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
+templateDesigner.js.incorrectName = darf sich nicht 'name' nennen. Verwenden Sie einen aussagekr\u00e4ftigen Namen.
 
 templateDesigner.addOption = Diese Option hinzuf\u00fcgen
 templateDesigner.updateOption = Diese Option \u00e4ndern
@@ -80,28 +80,29 @@ templateDesigner.newFieldCheckbox = Ein \u0027Kontrollk\u00e4stchen\u0027 hinzuf
 templateDesigner.newFieldRadio = Eine \u0027Optionsschaltfl\u00e4che\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldURL = Ein \u0027URL\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldDate = Ein \u0027Datum\u0027-Feld hinzuf\u00fcgen
-templateDesigner.newFieldTime = Add a 'Time' field
+templateDesigner.newFieldTime = Ein \u0027Zeit\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldFile = Ein \u0027Datei\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldImage = Ein \u0027Bild\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldVideo = Ein \u0027Video\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldUser = Ein \u0027Benutzer\u0027-Feld hinzuf\u00fcgen
-templateDesigner.newFieldMultipleUsers = Add a 'Users' field
+templateDesigner.newFieldMultipleUsers = Ein \u0027Benutzer\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldGroup = Ein \u0027Gruppe\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldLdap = Ein Feld \u0027LDAP-Connector\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldAccessPath = Ein Feld \u0027Standort\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldJdbc = Ein Feld \u0027JDBC Connector\u0027 hinzuf\u00fcgen
 templateDesigner.newFieldPdc = Ein \u0027KP\u0027-Feld hinzuf\u00fcgen
 templateDesigner.newFieldSequence = Ein \u0027Sequenz\u0027-Feld hinzuf\u00fcgen
-templateDesigner.newFieldExplorer = Add an 'ECM explorer' field
+templateDesigner.newFieldExplorer = Ein \u0027'EDM Explorer'\u0027-Feld hinzuf\u00fcgen
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
 templateDesigner.up = 	Nach oben
 templateDesigner.down = Nach unten
 
-templateDesigner.displayer.roles = Role(s)
-templateDesigner.displayer.usedInstanceOnly = Limited to the application
-templateDesigner.displayer.default = Default value
+templateDesigner.displayer.roles = Rolle(n)
+templateDesigner.displayer.usedInstanceOnly = auf der Anwendung Begrenzt
+templateDesigner.displayer.default = Standard Wert
+templateDesigner.available = Verf\u00fcgbar
 
 templateDesigner.displayer.image.maxWidth = Max Breite
 templateDesigner.displayer.image.maxHeight = Max H\u00f6he
@@ -114,7 +115,7 @@ templateDesigner.displayer.video.autoplay = Automatische Wiedergabe
 templateDesigner.displayer.wysiwyg.width = Breite
 templateDesigner.displayer.wysiwyg.height = H\u00f6he
 templateDesigner.displayer.wysiwyg.galleries = Fototheken
-templateDesigner.displayer.wysiwyg.fileStorages = Verf\u00fcgbare Dateien
+templateDesigner.displayer.wysiwyg.fileStorages = Verf\u00fcgbare Dateienbank
  
 templateDesigner.displayer.sequence.minLength = Min L\u00e4nge
 templateDesigner.displayer.sequence.startValue = Startwert
@@ -122,4 +123,4 @@ templateDesigner.displayer.sequence.valueCreation = Wert Erzeugung
 templateDesigner.displayer.sequence.reuseAvailableValues = Wiederverwendung der verf\u00fcgbaren Werte
 templateDesigner.displayer.sequence.alwaysIncrement = Immer Inkrementieren
 
-templateDesigner.displayer.explorer.scope = Identifier(s)
+templateDesigner.displayer.explorer.scope = Identifizierung(en)
