--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/multilang/domainLDAPBundle_de.properties
@@ -25,9 +25,15 @@
 #
 #  Specific properties names used in domain Silverpeas
 #
-
+firstName.description = Hilfe mit den Vornamen
+lastName.description = Hilfe mit den Namen
+login.description = Hilfe mit dem Login
+email.description = Hilfe mit der Mailadresse
 title         = Titel
 company       = DRD
+title.description = Hilfe mit dem Titelfeld
+office        = B\u00fcro
+
 position      = Abteilung
 boss          = Verantwortlicher
 phone         = Telefonnummer
