--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
@@ -55,7 +55,7 @@ address = Adresse
 operations = Operationen
 libelle = Text
 requiredFields = Obligatorisch
-component = Dienst
+component =  Anwendung
 default = Standard
 description = Meldung
 method = Mittel
