--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_de.properties
@@ -22,6 +22,6 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-clickBelow = Hier klicken, um zum KM Service zu gelangen:
+clickBelow = Hier klicken, um zur Anwendung zu gelangen:
 clickHere = Hier klicken
 ToAccessDocument = um direkt zu diesem Dokument zu gelangen.
