--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -32,7 +32,7 @@ pdcPeas.editAxis                       = Die Achse bearbeiten
 pdcPeas.editValue                      = Den Wert bearbeiten
 pdcPeas.updateValue                    = Den Wert \u00e4ndern
 pdcPeas.moveValue                      = Den Wert verschieben
-pdcPeas.editRights                     = Dire Rechte verwalten
+pdcPeas.editRights                     = Rechte verwalten
 pdcPeas.noRight 		       	 	   = Sie haben keine Rechte auf dieser Achse.
 
 pdcPeas.value                          = Wert
@@ -56,13 +56,12 @@ pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad l\u00f6schen 
 pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert l\u00f6schen zu wollen?
 pdcPeas.confirmDeletePosition          = Sind Sie sicher, die Position l\u00f6schen zu wollen?
 pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl l\u00f6schen zu wollen?
-pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enth\u00e4lt verschieben zu wollen ?
-
-pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher alle Administratoren l\u00f6schen zu wollen ?
-pdcPeas.deleteAllManagers			   = Alle Administratoren l\u00f6schen
-pdcPeas.updateManagers				   = Liste der Administratoren \u00e4ndern
-pdcPeas.managers					   = Administratoren
-pdcPeas.managersInherited			   = Ererbte Administratoren
+pdcPeas.confirmMoveValue			   = Sind Sie sicher, dass Sie diesen Wert und alles darin enthaltene, bewegen zu wollen?
+pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher, alle Verwalter entfernen zu wollen?
+pdcPeas.deleteAllManagers			   = Alle Verwalter entfernen
+pdcPeas.updateManagers				   = Verwalter Liste \u00e4ndern
+pdcPeas.managers					   = Verwalter
+pdcPeas.managersInherited			   = Geerbte Verwalter
 
 pdcPeas.createDaughterValue            = Einen Tochterwert erstellen
 pdcPeas.insertMotherValue              = Einen Mutterwert einf\u00fcgen
@@ -83,7 +82,7 @@ pdcPeas.hideSecondaryAxis			   = Sekondare Achsen Verstecken
 
 pdcPeas.classifyPublication            = Klassifizierung
 pdcPeas.classifyAdd                    = Erstellen einer neuen Position
-pdcPeas.classifyUpdate                 = \u00c4ndern eine Position
+pdcPeas.classifyUpdate                 = \u00C4ndern eine Position
 pdcPeas.classifyDelete                 = Die gew\u00e4hlten Positionen l\u00f6schen
 pdcPeas.position                       = Position
 pdcPeas.positions                      = Positionen
@@ -93,8 +92,8 @@ pdcPeas.addPosition                    = Position hinzuf\u00fcgen
 pdcPeas.editPosition                   = Position \u00e4ndern
 pdcPeas.deletePosition                 = Position l\u00f6schen
 pdcPeas.deletedPosition                = Position gel\u00f6scht
-pdcPeas.saveThePosition                = Speichern Sie die oben genannte Position
-pdcPeas.inheritedPositions             = Positionen des \u00fcbergeordneten Themas
+pdcPeas.saveThePosition                = Diese Position speichern
+pdcPeas.inheritedPositions             = Position des Mutterthemas
 
 pdcPeas.path                           = Pfad
 pdcPeas.variant                        = Variante
@@ -103,10 +102,10 @@ pdcPeas.notVariants                    = Invarianten
 pdcPeas.optional                       = Fakultativ
 
 pdcPeas.axisAlreadyExist               = Eine Achse mit dem gleichen Namen gibt es bereits!
-dcPeas.axisCantMove				   = Man kann eine Achse nicht verschieben !
+pdcPeas.axisCantMove				   = Man kann eine Achse nicht verschieben !
 pdcPeas.valueAlreadyExist              = Einen Wert mit dem gleichen Namen gibt es bereits!
 pdcPeas.maximumAxisReach               = Die maximale Anzahl Achsen ist erreicht worden!
-pdcPeas.positionAlreadyExist           = Die Position ist bereits vorhanden!
+pdcPeas.positionAlreadyExist           = Eine Position mit dem gleichen Namen gibt es bereits!
 
 pdcPeas.emptyMotherName                = Das Feld ' Mutterwert ' ist obligatorisch
 pdcPeas.emptyDaughterName              = Das Feld ' Tochterwert ' ist obligatorisch
@@ -135,11 +134,11 @@ pdcPeas.SortValueSearch.1 = Relevanz
 pdcPeas.SortValueSearch.2 = Titel
 pdcPeas.SortValueSearch.3 = Autor
 pdcPeas.SortValueSearch.4 = Erstellungsdatum
-pdcPeas.SortValueSearch.5 = \u00c4nderungsdatum
+pdcPeas.SortValueSearch.5 = \u00C4nderungsdatum
 pdcPeas.SortValueSearch.6 = Standort
 pdcPeas.SortValueSearch.7 = Beliebtheit
 pdcPeas.DomainSelect = Bereich:
-pdcPeas.ComponentSelect = Dienst:
+pdcPeas.ComponentSelect = Anwendung:
 pdcPeas.AuthorSelect = Herausgeber:
 pdcPeas.CreateAfterDate = Ver\u00f6ffentlicht nach dem :
 pdcPeas.UpdateAfterDate = Ver\u00e4ndert nach dem :
@@ -178,7 +177,7 @@ pdcPeas.pertinence = Stichhaltigkeit
 pdcPeas.valeur = Wert
 pdcPeas.emplacement = Standort
 pdcPeas.definition = Definition
-pdcPeas.searchType = Art der Suche :
+pdcPeas.searchType = Art des Beitrags :
 
 pdcPeas.glossaire_to_view = Das Glossar anzeigen
 pdcPeas.tracker_to_select = Die Auswahl best\u00e4tigen
@@ -270,14 +269,15 @@ pdcPeas.choiceForm = Sie m\u00fcssen ein Formular ausw\u00e4hlen
 pdcPeas.Axe = Achse
 
 pdcPeas.selectAll=Alles ausw\u00e4hlen
+pdcpeas.didYouMean= Meinten Sie :
 
 # Facet group search message
 pdcPeas.facet.author= Author	  	 
-pdcPeas.facet.service= Service
+pdcPeas.facet.service= Anwendung
 pdcPeas.facet.tooltip.enable= Klicken Sie hier um die Suche auf * zu verfeinern
 pdcPeas.facet.tooltip.disable= Klicken Sie hier um den Suchfilter auf * zu l\u00f6schen
-pdcPeas.facet.toggle.show = Display all
-pdcPeas.facet.toggle.hide = Minimize
+pdcPeas.facet.toggle.show = Alles anzeigen
+pdcPeas.facet.toggle.hide = Reduzieren
  
 pdcPeas.popularity = * Mal konsultiert
 pdcPeas.external.search.label=Externer Server :
@@ -286,19 +286,20 @@ pdcPeas.external.search.error=Bitte kontaktieren Sie den Administrator der Websi
 pdcPeas.error= Fehler
 
 # Label linked to pdcPeasSettings.properties
+external.search.server.1.label=Mein externer Server 1
+external.search.server.2.label=Mein externer Server 2
 
-pdcPeas.MustContainsMandatoryAxis=must be listed on the axes required
-pdcPeas.MustBeClassified = The classification is mandatory to create a contribution.<br />Please set a position with the mandatory axes.
-pdcPeas.theContent=This contribution
-pdcPeas.CanDoAPredefineClassification = Sie k\u00f6nnen eine Standard-Klassifikation f\u00fcr Publikationen zu diesem Thema <strong>{0}</strong>. <br /> Wenn dieses Thema wird die Klassifizierung f\u00fcr das \u00fcbergeordnete Thema definiert sind.
+pdcPeas.MustContainsMandatoryAxis=muss auf den obligatorischen Achsen geordnet sein
+pdcPeas.MustBeClassified = Die Klassifizierung ist f\u00fcr die Erschaffung eines Beitrags erforderlich.<br />Bitte w\u00e4hlen Sie eine Position aus und best\u00e4tigen Sie Ihre Wahl.
+pdcPeas.theContent=Dieser Beitrag
 external.search.server.1.label=Mein Externer Server 1
 external.search.server.2.label=Mein Externer Server 2
 
 # Label linked to pdcPeasSettings.properties : typed search
-search.type.1.label= Publications
+search.type.1.label= EDM Ver\u00f6ffentlichungen
 search.type.2.label= Events
-search.type.3.label= Pictures
-search.type.4.label= Polls, Surveys
-search.type.5.label= Tasks (project)
+search.type.3.label= Bilder
+search.type.4.label= Umfragen, Befragungen
+search.type.5.label= Aufgaben (Projekt)
 search.type.6.label= Blogs
 search.type.7.label= Forums
