--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
@@ -70,7 +70,7 @@ browseBar_Path4 = \u00C4nderung des Benachrichtigungskanals
 type= Typ
 usage = Verwendung
 adresse = Kontakt
-composant = Dienst
+composant = Anwendung
 notif_type = Benachrichtigungsart
 dest = Mittel
 default = Standard
