--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
@@ -45,5 +45,5 @@ portlet.HelloSilverpeas.title = Willkommen
 portlet.MyBookmarks.title = Meine Favoriten
 portlet.MyCheckOutFiles.title = Meine reservierte Dateien
 portlet.QuickInfos.title = Neuigkeiten
-portlet.ComponentInstance.title = Eine Komponente
+portlet.ComponentInstance.title = Eine Anwendung
 portlet.IFrame.title = IFrame
