--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
@@ -54,7 +54,7 @@ selectionPeas.groupsOfGroup = Untergruppen von
 
 selectionPeas.groupsOfUser = Zugeh\u00f6rigkeitsgruppen
 selectionPeas.directUsersOfGroup = Benutzer
-selectionPeas.groupParent = \u00dcbergeordnete Gruppe
+selectionPeas.groupParent = \u00DCbergeordnete Gruppe
 
 selectionPeas.selectedGroups = Gew\u00e4hlte Gruppen
 selectionPeas.selectedUsers = Gew\u00e4hlte Benutzer
