--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
@@ -49,7 +49,7 @@ newDocumentVersion = Neue Version des Dokumentes
 new_document = Neues Dokument
 browse = Bl\u00e4ttern
 typeOfVersion = Art der Version
-public = \u00d6ffentlich
+public = \u00D6ffentlich
 archive = Arbeit
 required = obligatorisch
 document = Dokument
@@ -85,19 +85,20 @@ versioning.SaveListWriters = Speichern Sie die Liste der Benutzer als Modell
 versioning.ListSaved = Modell der Liste gespeichert... 
 versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schlie\u00dfen Sie diese Datein bevor Sie Sie freigeben.
 versioning.warning.checkin.locked.title=Datei gesperrt
-versioning.warning.checkin.locked.force=Force release
+versioning.warning.checkin.locked.force= Freigabe erzwingen
 
-versioning.xmlForm.View = More...
-versioning.xmlForm.XtraData = Additional informations
-versioning.xmlForm.ToolTip = Additional informations about
-versioning.CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
+versioning.xmlForm.View = Mehr...
+versioning.xmlForm.XtraData = Zus\u00e4tzliche Informationen
+versioning.xmlForm.ToolTip = Zus\u00e4tzliche Informationen \u00fcber
 
-versioning.share = Share this file
+versioning.CopyLink = Um den Link zu dieser Datei zu kopieren : Rechtsklick und "Verkn\u00fcpfung kopieren"
 
-versioning.checkOutAndDownload = Lock and download
-versioning.checkOutAndEditOnline = Edit online
+versioning.share = Diese Datei freigeben
 
-confirm.checkin.message=Do you want to save your changes ?
-versioning.checkin.abort=Abort my changes
+versioning.checkOutAndDownload = Reservieren und herunterladen
+versioning.checkOutAndEditOnline = Online Bearbeiten
 
-versioning.dialog.checkout.nok = File already reserved by another user
+confirm.checkin.message=M\u00f6chten Sie Ihre \u00C4nderungen speichern ?
+versioning.checkin.abort= \u00C4nderungen verwerfen
+
+versioning.dialog.checkout.nok = Datei bereits von einem anderen Benutzer reserviert
