--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
@@ -59,7 +59,7 @@ toutesCategories = Alle
 
 # Classification
 classification = Art 
-public = &Ouml;ffentlich 
+public = \u00D6ffentlich
 private = Privat 
 confidential = Vertraulich
 
@@ -84,7 +84,7 @@ ajoutOk = Ajout OK
 majOk = Hinzuf\u00fcgung OK
 suppressionOk = L\u00f6schung OK
 supprimerNote = L\u00f6schen 
-modifierListeDiffusion = \u00c4ndern 
+modifierListeDiffusion = \u00C4ndern 
 trouverCreneau = Eine Verf\u00fcgbarkeit finden
 modifierCategories = Die Rubriken \u00e4ndern
 afficherCalendrier = Kalender anzeigen
