--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
@@ -41,14 +41,14 @@ couper = Ausschneiden
 coller = Einf\u00fcgen
 reset = L\u00f6schen
 fermer = Schliessen
-ouvrir = &Ouml;ffnen
+ouvrir = \u00D6ffnen
 
 # actions
 supprimer = L\u00f6schen
 valider = OK
 annuler = Abbrechen
 creation = Erstellen einer QuickInfo
-edition = \u00c4ndern
+edition = \u00C4ndern
 suppression = L\u00f6schen
 
 # confirmation
