--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
@@ -95,7 +95,7 @@ listeDiffusionVide = Leer
 descriptionToDo = Beschreibung
 nomToDo = Name
 mandatoryFields = Obligatorisch
-public = &Ouml;ffentlich  
+public = \u00D6ffentlich   
 private = Privat 
 priorite = Priorit\u00e4t
 
