--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -52,7 +52,7 @@ newDocumentVersion = Neue Version des Dokumentes
 new_document = Neues Dokument
 browse = Browsen
 typeOfVersion = Typ der Version
-public = &Ouml;ffentlich
+public = \u00D6ffentlich
 archive = Archiv
 required = obligatorisch
 document = Dokument
@@ -63,6 +63,12 @@ pleaseFill_single = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen.
 # erreurs
 erreur = Fehler
 champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
+
+comment.add = Kommentar hinzuf\u00fcgen
+comment.suppressionConfirmation = Sind Sie sicher, folgendes Kommentar l\u00f6schen zu wollen:
+comment.comment = Kommentar
+comment.pleaseFill_single = Sie m\u00fcssen alle obligatorischen Felder ausf\u00fcllen.
+comment.champsTropLong = Der Kommentar ist auf 2000 Zeichen begrenzt
 
 comment.DAO_NoClosedStatment = Das " Statement " kann nicht geschlossen werden
 comment.EJB_NoClosedConnection = Die Verbindung zur Datenbank kann nicht geschlossen werden
