--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_de.properties
@@ -31,7 +31,7 @@ notification.pleaseValidate = Bitte das Dokument genehmigen!
 
 versioning.DocumentName = Dokument
 versioning.Space = Bereich
-versioning.Component = KM-Service
+versioning.Component = Anwendung
 versioning.Date = Datum
 versioning.URL = URL
 
