--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
@@ -49,10 +49,10 @@ silverStatisticsPeas.Connections 		 = Verbindungen
 silverStatisticsPeas.LoginNumber 		 = Anzahl Verbindungen
 silverStatisticsPeas.AccessNumber	 	 = Verteilung der Zugriffe
 silverStatisticsPeas.ToSpace	 	 	 = auf den Bereich
-silverStatisticsPeas.JobPeas	 	 	 = Dienste
-silverStatisticsPeas.ServicesNumber	 	 = Verteilung nach Dienst-Art
+silverStatisticsPeas.JobPeas	 	 	 = Anwendung
+silverStatisticsPeas.ServicesNumber	 	 = Verteilung nach Anwendungs-Art
 silverStatisticsPeas.InstancesNumber	 	 = Anzahl Instanzen
-silverStatisticsPeas.VolumeNumber	 	 = Verteilung der Publikationen
+silverStatisticsPeas.VolumeNumber	 	 = Verteilung der Zuf\u00fchrungen
 silverStatisticsPeas.VolumeDocsNumber	 	 = Verteilung der Dateien
 silverStatisticsPeas.FromSpace	 	 	 = des Bereichs
 silverStatisticsPeas.AttachmentsNumber	 	 = Anzahl der beigef\u00fcgten Dateien
@@ -65,7 +65,7 @@ silverStatisticsPeas.Historique                  = Vorgeschichte
 silverStatisticsPeas.Access                  	 = Zugriff
 silverStatisticsPeas.EvolutionAccessDeb 	 = Vorgeschichte der Zugriffe
 silverStatisticsPeas.EvolutionAccessSpace 	 = zum Bereich
-silverStatisticsPeas.EvolutionAccessService 	 = zum Dienst
+silverStatisticsPeas.EvolutionAccessService 	 = zur Anwendung
 silverStatisticsPeas.EvolutionAccessGroup 	 = der Gruppe
 silverStatisticsPeas.EvolutionAccessUser 	 = des Benutzers
 silverStatisticsPeas.ClearUserPanelPeas 	 = Filter L\u00f6schen
@@ -110,9 +110,9 @@ silverStatisticsPeas.pdc.cross.select=Eine Achse ausw\u00e4hlen
 silverStatisticsPeas.pdc.error.select=W\u00e4hlen Sie bitte zwei Achsen aus.  
 silverStatisticsPeas.pdc.error.same=Sie m\u00fcssen zwei unterschiedlich ausw\u00e4hlen.
 
-silverStatisticsPeas.sums.applications = applications
-silverStatisticsPeas.sums.attachments.number = attachments
-silverStatisticsPeas.sums.attachments.size = of attachments
-silverStatisticsPeas.sums.contributions = contributions
-
-silverStatisticsPeas.volumes.tab.contributions = Contributions
+silverStatisticsPeas.sums.applications = Anwendungen
+silverStatisticsPeas.sums.attachments.number = Anh\u00e4nge
+silverStatisticsPeas.sums.attachments.size = von Anh\u00e4nge
+silverStatisticsPeas.sums.contributions = Zuf\u00fchrungen
+ 
+silverStatisticsPeas.volumes.tab.contributions = Zuf\u00fchrungen
