--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -49,7 +49,7 @@ GML.category	 					= Kategorie
 GML.cellularPhoneNumber 	                        = Mobiltel.
 GML.close						= Schliessen
 GML.company 						= Firma
-GML.component                                           = KM-Service
+GML.component                                           =  Anwendung
 GML.copy 						= Kopieren
 GML.create						= Erstellen
 GML.createPublication			                = Erstellen einer Ver\u00f6ffentlichung
@@ -90,7 +90,7 @@ GML.homePhoneNumber 			                = Privattel.
 
 GML.insertHere						= Hier einf\u00fcgen
 
-GML.jobPeas						= Dienst
+GML.jobPeas						=  Anwendung
 
 GML.keyWords						= Schl\u00fcsselw\u00f6rter
 GML.kmmanager                   			= Administrator des Klassierungsplanes
@@ -103,7 +103,7 @@ GML.lastName                                            = Name
 GML.management						= Verwaltung
 GML.messages						= Meldungen
 GML.minimize					        = Minimieren
-GML.modify						= \u00c4ndern
+GML.modify						= \u00C4ndern
 GML.month 						= Monat
 GML.move						= Verschieben
 
@@ -128,29 +128,32 @@ GML.organization					= Organisationen
 GML.order					        = Reihenfolge
 
 GML.password 					= Passwort
-GML.passwordAgain 				= Bestatigen Sie das Passwort
+GML.passwordAgain 				= Best\u00e4tigen Sie das Passwort
 GML.paste						= Einf\u00fcgen
 GML.path						= Speicherort
 GML.phoneNumber 					= Telefon
 GML.position 						= Posten
-GML.public 						= &Ouml;ffentlich
+GML.public 						= \u00D6ffentlich
 GML.preview						= Vorschau
 GML.previous						= Zur\u00fcck
 GML.print						= Drucken
 GML.priority 						= Priorit\u00e4t
 GML.privateFS 						= Private
 GML.privateMS 						= Privater
-GML.publication						= Ver\u00f6ffentlichung
-GML.publications					= Ver\u00f6ffentlichungen
+GML.publication						= Veröffentlichung
+GML.publications					= Veröffentlichungen
 GML.publish						= Ver\u00f6ffentlichen
 
 GML.restore						= Wiederherstellen
-
+GML.saveDraft					= Entwurf
 GML.search						= Suchen
 GML.size						= Gr\u00f6sse
 GML.space						= Bereich
 GML.status						= Status
 GML.subscription					= Abonnement
+GML.subscribe                   = Sich abonnieren
+GML.unsubscribe                 = Abonnement k\u00fcndigen
+
 GML.shrink						= Reduzieren
 GML.surname						= Vorname
 GML.selection						= Auswahl
@@ -168,7 +171,7 @@ GML.unlock					        = Entsperren
 GML.upload						= Hinaufladung
 GML.user						= Ben\u00fctzer
 GML.users						= Ben\u00fctzer
-GML.user_s                      = ben\u00fctzer
+GML.user_s                      = Ben\u00fctzer
 
 GML.validate					        = Best\u00e4tigen
 GML.viewCalendar					= Kalender anzeigen
@@ -187,10 +190,14 @@ GML.popupTitle						= Silverpeas
 GML.trademark						= Copyright 2001-2011 Silverpeas - All Rights Reserved
 
 # Formulaire
-
+GML.thefield						= Dieses Feld
+GML.isRequired						= ist obligatorisch.
 GML.requiredField					= Obligatorisch
 GML.fromDate						= Von
 GML.toDate						= bis zum
+GML.by							= von
+GML.fromDate							= Vom
+GML.toDate							= bis am
 
 # format
 GML.dateFormat = dd.MM.yyyy
@@ -246,11 +253,10 @@ GML.MustContainsLettersAndDigitsOnly = sollte nur aus Buchstaben und Zahlen best
 GML.PDC = Klassierungsplan
 GML.PDCParam = Verwendung des KP parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
-GML.PDCValidatePosition = Validate diese Position
-GML.PDCDeletePosition = L\u00f6schen Sie die Position
-GML.PDCPredefinePositions = Definieren Sie die Standard-Klassifikation
-GML.PDCPositionsPredefinition = Einstellen der Standard-Klassifikation
-
+GML.PDCValidatePosition = Diese Position best\u00e4tigen
+GML.PDCDeletePosition = Die gew\u00e4hlten Positionen l\u00f6schen
+GML.PDCPredefinePositions = Definieren Sie die Standard-Klassierung
+GML.PDCPositionsPredefinition = Definition der Standard-Klassierung
 
 # Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Sie verf\u00fcgen nicht \u00fcber gen\u00fcgende Rechte, um zur gew&#x00fc;nschten Information Zugang zu erhalten!
@@ -260,7 +266,7 @@ GML.creationDate = Erstellt am
 GML.updateDate = Ge\u00e4ndert am
 
 GML.language = Sprache
-GML.translationRemove = Diese \u00dcbersetzung l\u00f6schen
+GML.translationRemove =  Diese \u00DCbersetzung l\u00f6schen
 
 # Import CSV
 GML.csvFile = CSV Datei
@@ -268,7 +274,7 @@ GML.ligne = - Reihe
 GML.colonne = Spalte 
 GML.valeur = Wert
 GML.obligatoire = Dieses Feld ist obligatorisch
-GML.nbCarMax = Der Wert darf nicht \u00dcberschritten werden
+GML.nbCarMax = Der Wert darf nicht \u00DCberschritten werden
 GML.nbCarMin = Der Wert muss mindestens 
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
@@ -277,7 +283,7 @@ GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiter
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
 GML.ExportInProgress = Export l\u00e4uft ...
-
+GML.ExportCSV = Im CSV Format exportieren
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
 
@@ -305,11 +311,12 @@ GML.user.offline = Offline
 GML.mandatory = Obligatorisch
 
 GML.and = und
+GML.reset = Zur\u00fccksetzen
 GML.to = bis
 GML.at = um
 GML.At = Um
 GML.From = Aus
-
+GML.operations.setupComponent = Konfigurieren Sie diesen Dienst
 GML.linkToVisit = Hyperlink auf Ihren Besuch
 GML.Show = Zeigen:
 
@@ -321,4 +328,6 @@ GML.pagination.LastPage=>>
 GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Seite
-GML.internalDomain=Gemischte Domain
+GML.internalDomain=Gemischte Domäne
+
+GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert aus
