--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -62,3 +62,12 @@ SendedUserNotifications = Notifications envoy\u00E9es
 Notifier = Envoi d'une notification
 MessageSuppressionCanal = Etes-vous s\u00FBr de vouloir supprimer ce canal ?
 MessageSuppressionRegle = Etes-vous s\u00FBr de vouloir supprimer cette r\u00E8gle ?
+
+channelChoiceLabel = Choix du canal de notification :
+frequencyChoiceLabel = Fréquence de réception des mails :
+
+frequencyDefault=Par d\u00E9faut ({0})
+frequencyNONE=Instantan\u00E9e
+frequencyDAILY=Quotidienne
+frequencyWEEKLY=Hebdomadaire
+frequencyMONTHLY=Mensuelle
